15-Jumlahkan-Tugas/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;D:\mycode\Komunikasi data\15-Jumlahkan-Tugas
-d
D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\Gabung.java
<---- end of javadoc command ---->
Loading source file D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\Gabung.java...
Constructing Javadoc information...
D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\Gabung.java:39: error: cannot find symbol
    public double hasil() throws InteractedException
                                 ^
  symbol:   class InteractedException
  location: class Gabung
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\Gabung.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\package-frame.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\package-summary.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\allclasses-frame.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\allclasses-noframe.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\index.html...
Generating D:\mycode\Komunikasi data\15-Jumlahkan-Tugas\doc\stylesheet.css...
1 warning
